# Pepsi-Bot

./: README.md  tree.drawio  tree.odg  tree_v2.odg
workspace/: Dockerfile  requirements.txt
workspace/install/: local_setup.sh  setup.sh
workspace/install/basic_navigation/include/basic_navigation/: halt.h  move_forward_left.h  move_forward_right.h  rotate_right.h
workspace/install/basic_navigation/lib/basic_navigation/: move_forward_node
workspace/install/basic_navigation/share/basic_navigation/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
workspace/install/custom_interface_yolo/share/custom_interface_yolo/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
workspace/install/detection_interfaces/share/detection_interfaces/: local_setup.sh  package.sh  package.xml
workspace/install/distance_check/include/distance_check/: distance_sensor_server.h
workspace/install/distance_check/lib/distance_check/: distance_sensor_server
workspace/install/distance_check/share/distance_check/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
workspace/install/distance_converter/lib/distance_converter/: distance_converter
workspace/install/distance_converter/share/distance_converter/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
workspace/install/distance_interfaces/share/distance_interfaces/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
workspace/install/main/lib/main/: main_node  test_node
workspace/install/main/share/main/: local_setup.sh  package.sh
workspace/install/object_detector/share/object_detector/: package.sh
workspace/install/object_finder/include/object_finder/: find_object.h  object_at_center.h
workspace/install/object_finder/share/object_finder/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
workspace/install/robot_hardware_interfaces/share/robot_hardware_interfaces/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
workspace/install/yellow_ball_finder/include/yellow_ball_finder/: find_yellow_ball.h  image_collector.h  yellow_ball_action_server.h  yellow_ball_follower.h
workspace/install/yellow_ball_finder/lib/yellow_ball_finder/: image_collector  yellow_ball_action_server  yellow_sphere_finder
workspace/install/yellow_ball_finder/share/yellow_ball_finder/: package.sh
workspace/install/yolov8_webcam/lib/yolov8_webcam/: yolov8_node
workspace/install/yolov8_webcam/share/yolov8_webcam/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
workspace/launch/: launch.py
workspace/log/: latest_build  latest_list
workspace/src/gripper/gripper_actions/: CMakeLists.txt  package.xml
workspace/src/gripper/gripper_actions/include/gripper_actions/: close_gripper.h  gripper_control_server.h  open_gripper.h
workspace/src/gripper/gripper_actions/src/: gripper_control_server.cpp  gripper_control_server_launcher.cpp
workspace/src/gripper/gripper_interfaces/: CMakeLists.txt  package.xml
workspace/src/main/main/: CMakeLists.txt  package.xml
workspace/src/main/main/include/main/: ensure_detection_ready.h  main_behavior_tree.xml  main_node.h  wait.h
workspace/src/main/main/src/: main.cpp  main_node.cpp  test.cpp
workspace/src/navigation/basic_navigation/: CMakeLists.txt
workspace/src/perception/custom_interface_yolo/: CMakeLists.txt  package.xml
workspace/src/perception/detection_interfaces/: CMakeLists.txt
workspace/src/perception/detection_interfaces/srv/: DetectLine.srv
workspace/src/perception/distance_check/: CMakeLists.txt  package.xml
workspace/src/perception/distance_check/src/: distance_sensor_server.cpp  distance_sensor_server_launcher.cpp
workspace/src/perception/distance_converter/: CMakeLists.txt  package.xml
workspace/src/perception/distance_converter/src/: distance_converter.cpp  distance_converter_launcher.cpp
workspace/src/perception/distance_interfaces/: CMakeLists.txt  package.xml
workspace/src/perception/line_detector/: CMakeLists.txt  package.xml
workspace/src/perception/object_detector/: package.xml  setup.py
workspace/src/perception/object_detector/object_detector/: object_detector.py
workspace/src/perception/object_finder/: CMakeLists.txt
workspace/src/perception/yellow_ball_finder/: CMakeLists.txt  package.xml
workspace/src/perception/yolov8_webcam/: package.xml  setup.cfg  setup.py
(+150 files in other folders)
