<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gripper_actions</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="fourfold164@gmail.com">fourfold</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>behaviortree_cpp_v3</depend>
  <depend>rclcpp</depend>
  <depend>gripper_interfaces</depend>
  <depend>robot_hardware_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>rclcpp_action</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
